<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/original_white"
    tools:context=".ui.register.RegisterActivity">

    <include
        android:id="@+id/login_toolbar"
        layout="@layout/layout_default_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_register_id"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/login_toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/register_id_editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/round_edittext"
        android:ems="10"
        android:paddingStart="12sp"
        android:paddingTop="12sp"
        android:paddingEnd="12sp"
        android:paddingBottom="12sp"
        android:inputType="textMultiLine|textNoSuggestions|textUri"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintLeft_toLeftOf="@id/textView"
        app:layout_constraintRight_toLeftOf="@id/register_dup_check_button"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"/>

    <Button
        android:id="@+id/register_dup_check_button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/phonereg_btn_background"
        android:text="@string/activity_register_dup_check_button"
        android:textColor="@color/original_black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/register_id_editText"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="30dp"/>

    <TextView
        android:id="@+id/register_id_dup_hint_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/register_id_editText"
        app:layout_constraintLeft_toLeftOf="@id/register_id_editText"
        app:layout_constraintRight_toRightOf="@id/register_dup_check_button"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_register_password"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/textView"
        app:layout_constraintTop_toBottomOf="@id/register_id_dup_hint_textView"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/register_password_editText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:paddingStart="12sp"
        android:paddingTop="12sp"
        android:paddingEnd="12sp"
        android:paddingBottom="12sp"
        android:background="@drawable/round_edittext"
        android:drawableEnd="@drawable/ic_icon_visibility_off"
        android:inputType="textMultiLine|textNoSuggestions|textPassword"
        android:longClickable="false"
        app:layout_constraintLeft_toLeftOf="@id/register_id_editText"
        app:layout_constraintRight_toRightOf="@id/register_dup_check_button"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/register_password_hint_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="@id/register_password_editText"
        app:layout_constraintRight_toRightOf="@id/register_password_editText"
        app:layout_constraintTop_toBottomOf="@id/register_password_editText"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_register_email"
        android:textColor="#000000"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/register_password_hint_textView"
        app:layout_constraintLeft_toLeftOf="@id/textView"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/register_email_editText"
        android:paddingStart="12sp"
        android:paddingTop="12sp"
        android:paddingEnd="12sp"
        android:paddingBottom="12sp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/round_edittext"
        android:inputType="textMultiLine|textNoSuggestions|textEmailAddress"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/textView5"
        app:layout_constraintLeft_toLeftOf="@id/textView5"
        app:layout_constraintRight_toRightOf="@id/register_password_editText"/>

    <TextView
        android:id="@+id/register_email_hint_textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/register_email_editText"
        app:layout_constraintLeft_toLeftOf="@id/register_email_editText"
        app:layout_constraintRight_toRightOf="@id/register_email_editText"
        android:layout_marginTop="5dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="주소"
        android:textColor="@color/original_black"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/register_email_hint_textView"
        app:layout_constraintLeft_toLeftOf="@id/textView"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/register_address_editText_1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/round_edittext"
        android:inputType="textMultiLine|textNoSuggestions|textEmailAddress"
        android:paddingStart="12sp"
        android:paddingTop="12sp"
        android:paddingEnd="12sp"
        android:paddingBottom="12sp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        app:layout_constraintLeft_toLeftOf="@id/textView4"
        app:layout_constraintRight_toLeftOf="@id/register_address_button"
        android:layout_marginRight="10dp"/>

    <ImageView
        android:id="@+id/register_address_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/edge_clickable_btn_background"
        android:src="@drawable/ic_icon_search"
        android:scaleType="centerInside"
        app:layout_constraintTop_toTopOf="@id/register_address_editText_1"
        app:layout_constraintLeft_toRightOf="@id/register_address_editText_1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="30dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/register_address_editText_2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/round_edittext"
        android:inputType="textMultiLine|textNoSuggestions|textEmailAddress"
        android:paddingStart="12sp"
        android:paddingTop="12sp"
        android:paddingEnd="12sp"
        android:paddingBottom="12sp"
        app:layout_constraintTop_toBottomOf="@id/register_address_editText_1"
        app:layout_constraintLeft_toLeftOf="@id/register_address_editText_1"
        app:layout_constraintRight_toRightOf="@id/register_address_button"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/register_post_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/phoneauth_btn_background"
        android:text="회원가입 끝!"
        android:textColor="@color/original_white"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/register_address_editText_2"/>

</androidx.constraintlayout.widget.ConstraintLayout>